Fix header spacing and box shadow margins in stat blocks.

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -39,7 +39,12 @@ blockquote, q, .description {
   font-family: "ScalySans";
   font-size: 0.75rem;
   margin-bottom: 1em;
+  margin-top: 5px;
   padding: 5px 10px;
+
+  h2 {
+    margin-top: .1em;
+  }
 
   h3 {
     border-bottom: 1px solid #58180D;
